# all_ct_reconstruction

./: .gitignore  DOCUMENTATION_SUMMARY.md  README.md  check_documentation.py  conftest.py  crop_documentation_summary.md  fbp_handler_documentation.md  pixi.toml  workflow_documentation_progress.md
notebooks/__code/: __init__.py  config.py  parent.py  pyproject.toml  step1_prepare_TimePix_images.py  step1_prepare_ccd_images.py  step1_prepare_timepix_images.py  step1_prepare_white_beam_mode_images.py  step2_slice_ccd_images.py  step2_slice_ccd_or_timepix_images.py  step2_slice_white_beam_mode_images.py  step4_visualization_ccd_images.py  svmbir_reconstruction_in_tof_mode.py  system.py  system_v2.py  system_v3.py
notebooks/__code/__all/: config_handler.py  custom_style.py  mplcanvas.py
notebooks/__code/ipywe/: imagedisplay.py  imageslider.py  myfileselector.py
notebooks/__code/utilities/: configuration_file.py  cor.py  create_scripts.py  exceptions.py  file_folder_browser.py  files.py  folder.py  general.py  images.py  json.py  load.py  logging.py  math.py  nexus.py  save.py  system.py  time.py
notebooks/__code/workflow/: center_of_rotation_and_tilt.py  checking_data.py  chips_correction.py  combine_ob_dc.py  combine_runs_with_same_angle.py  combine_tof.py  correct_chips_TO_REMOVE.py  crop.py  data_handler.py  exclusion.py  export.py  export_hdf5.py  fbp_handler.py  final_projections_review.py  images_cleaner.py  load.py  load_and_combine_tof_runs.py  log_conversion.py  mode_selection.py  normalization.py  rebin.py  recap_data.py  reconstruction_selection.py  tilt.py  (+8 more)
(+33 files in other folders)
